--- a/src/main/resources/data/vampire/predicate/in_dry_biome.json
+++ b/src/main/resources/data/vampire/predicate/in_dry_biome.json
@@ -4,7 +4,7 @@
     "predicate": {
         "type": "minecraft:player",
         "location": {
-            "biomes": "#vampire:has_no_rain"
+            "biomes": "#vampire:dry_biomes"
         }
     }
 }
